# jwm

./: .autotools  .cproject  .gitignore  .project  CONTRIBUTING.md  Doxyfile  Makefile.am  Makefile.in  README.md  README.upgrading  TODO  WrittenBack  aclocal.m4  autogen.sh  configure.ac  configure.scan  doc-footer.shtml  doc-header.shtml  example.jwmrc  jwm.desktop  nwm.1.in  nwm.desktop  other-format  start
contrib/: Makefile.in  nwm.xbm
po/: Makevars  da.po  de.po  es.po  fr.po  hu.po  it.po  lt.po  nl.po  nwm.pot  pl.po  pt.po  pt_BR.po  ru.po  zh_CN.po  zh_TW.po
src/: AbstractAction.cpp  AbstractAction.h  ApplicationsComponent.cpp  ApplicationsComponent.h  ApplicationsSystemComponent.cpp  ApplicationsSystemComponent.h  BackgroundComponent.cpp  BackgroundComponent.h  BackgroundSystemComponent.h  BaseComponent.cpp  BaseComponent.h  ClientState.cpp  ClientState.h  Component.cpp  Component.h  ComponentBuilder.cpp  ComponentBuilder.h  ComponentGroup.cpp  ComponentGroup.h  ComponentProperty.cpp  ComponentProperty.h  Configuration.cpp  Configuration.h  DesktopComponent.cpp  DesktopComponent.h  DesktopEnvironment.cpp  DesktopEnvironment.h  DesktopFile.cpp  DesktopFile.h  DesktopSystemComponent.cpp  DesktopSystemComponent.h  DockComponent.cpp  DockComponent.h  Flex.cpp  Flex.h  Graphics.cpp  Graphics.h  HashMap.cpp  HashMap.h  KeyEventHandler.cpp  (+132 more)
tests/: .gitignore  Makefile.am  gtest.cpp
xslt/: jwm-2.3.xslt  jwm-2.4.xslt
